compile/src/app/compile/codeParser.java
package app.compile;

// Generated from E:\Code\compileproject\code.g4 by ANTLR 4.1
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({ "all", "warnings", "unchecked", "unused", "cast" })
public class codeParser extends Parser
{
    protected static final DFA[] _decisionToDFA;
    protected static final PredictionContextCache _sharedContextCache = new PredictionContextCache();
    public static final int WS = 1, TOKEN_OPEN_B = 2, TOKEN_CLOS_B = 3,
            TOKEN_OPEN_P = 4, TOKEN_CLOS_P = 5, TOKEN_OPEN_S = 6,
            TOKEN_CLOS_S = 7, TOKEN_COMMA = 8, TOKEN_SEMICOLON = 9,
            TOKEN_COLON = 10, LOGIC_1 = 11, LOGIC_2 = 12, LOGIC_3 = 13,
            ARTH_1 = 14, ARTH_2 = 15, ARTH_3 = 16, ARTH_4 = 17,
            TOKEN_GRAB = 18, TOKEN_MAIN = 19, TOKEN_FUNCTION = 20,
            TOKEN_RETURNING = 21, TOKEN_REPEAT = 22, TOKEN_UNTIL = 23,
            TOKEN_FROM = 24, TOKEN_TO = 25, TOKEN_WITH = 26,
            TOKEN_DECLARE = 27, TOKEN_AS = 28, TOKEN_IS = 29, TOKEN_IF = 30,
            TOKEN_CHECK = 31, TOKEN_OR = 32, TOKEN_ELSE = 33, TYPE = 34,
            ID = 35, NUM = 36, STRING = 37;
    public static final String[] tokenNames = { "<INVALID>", "WS", "'['", "']'", "'('", "')'", "'<<'", "'>>'", "','", "';'", "':'", "LOGIC_1", "LOGIC_2", "LOGIC_3", "ARTH_1", "ARTH_2", "ARTH_3", "ARTH_4", "TOKEN_GRAB", "TOKEN_MAIN", "TOKEN_FUNCTION", "TOKEN_RETURNING", "TOKEN_REPEAT", "TOKEN_UNTIL", "TOKEN_FROM", "TOKEN_TO", "TOKEN_WITH", "TOKEN_DECLARE", "TOKEN_AS", "TOKEN_IS", "TOKEN_IF", "TOKEN_CHECK", "TOKEN_OR", "TOKEN_ELSE", "TYPE", "ID", "NUM", "STRING" };
    public static final int RULE_s = 0, RULE_operator_bool1 = 1,
            RULE_operator_bool2 = 2, RULE_operator_bool3 = 3,
            RULE_expression1 = 4, RULE_expression2 = 5, RULE_expression3 = 6,
            RULE_expression4 = 7, RULE_expression5 = 8,
            RULE_expression_final = 9, RULE_package_declaration = 10,
            RULE_main_function = 11, RULE_function_declaration = 12,
            RULE_parameter = 13, RULE_function_call = 14,
            RULE_group_statement = 15, RULE_statement = 16,
            RULE_declare_statement = 17, RULE_assignment_statement = 18,
            RULE_logical_statement = 19, RULE_conditional_statement = 20,
            RULE_conditional_CASE = 21, RULE_conditional_DEFAULT = 22,
            RULE_conditional_ELSEIF = 23, RULE_conditional_ELSE = 24,
            RULE_loop_statement = 25;
    public static final String[] ruleNames = { "s", "operator_bool1", "operator_bool2", "operator_bool3", "expression1", "expression2", "expression3", "expression4", "expression5", "expression_final", "package_declaration", "main_function", "function_declaration", "parameter", "function_call", "group_statement", "statement", "declare_statement", "assignment_statement", "logical_statement", "conditional_statement", "conditional_CASE", "conditional_DEFAULT", "conditional_ELSEIF", "conditional_ELSE", "loop_statement" };

    @Override
    public String getGrammarFileName()
    {
        return "code.g4";
    }

    @Override
    public String[] getTokenNames()
    {
        return tokenNames;
    }

    @Override
    public String[] getRuleNames()
    {
        return ruleNames;
    }

    @Override
    public ATN getATN()
    {
        return _ATN;
    }

    public codeParser(TokenStream input)
    {
        super(input);
        _interp = new ParserATNSimulator(this, _ATN, _decisionToDFA, _sharedContextCache);
    }

    public static class SContext extends ParserRuleContext
    {
        public List<Function_declarationContext> function_declaration()
        {
            return getRuleContexts(Function_declarationContext.class);
        }

        public List<Main_functionContext> main_function()
        {
            return getRuleContexts(Main_functionContext.class);
        }

        public Function_declarationContext function_declaration(int i)
        {
            return getRuleContext(Function_declarationContext.class, i);
        }

        public Main_functionContext main_function(int i)
        {
            return getRuleContext(Main_functionContext.class, i);
        }

        public Package_declarationContext package_declaration(int i)
        {
            return getRuleContext(Package_declarationContext.class, i);
        }

        public List<Package_declarationContext> package_declaration()
        {
            return getRuleContexts(Package_declarationContext.class);
        }

        public SContext(ParserRuleContext parent, int invokingState)
        {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex()
        {
            return RULE_s;
        }

        @Override
        public void enterRule(ParseTreeListener listener)
        {
            if (listener instanceof codeListener)
                ((codeListener) listener).enterS(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener)
        {
            if (listener instanceof codeListener)
                ((codeListener) listener).exitS(this);
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor)
        {
            if (visitor instanceof codeVisitor)
                return ((codeVisitor<? extends T>) visitor).visitS(this);
            else
                return visitor.visitChildren(this);
        }
    }

    public final SContext s() throws RecognitionException
    {
        SContext _localctx = new SContext(_ctx, getState());
        enterRule(_localctx, 0, RULE_s);
        int _la;
        try
        {
            int _alt;
            enterOuterAlt(_localctx, 1);
            {
                setState(55);
                _errHandler.sync(this);
                _la = _input.LA(1);
                while (_la == TOKEN_GRAB)
                {
                    {
                        {
                            setState(52);
                            package_declaration();
                        }
                    }
                    setState(57);
                    _errHandler.sync(this);
                    _la = _input.LA(1);
                }
                setState(61);
                _errHandler.sync(this);
                _alt = getInterpreter().adaptivePredict(_input, 1, _ctx);
                while (_alt != 2 && _alt != -1)
                {
                    if (_alt == 1)
                    {
                        {
                            {
                                setState(58);
                                function_declaration();
                            }
                        }
                    }
                    setState(63);
                    _errHandler.sync(this);
                    _alt = getInterpreter().adaptivePredict(_input, 1, _ctx);
                }
                setState(67);
                _errHandler.sync(this);
                _la = _input.LA(1);
                while (_la == TOKEN_FUNCTION)
                {
                    {
                        {
                            setState(64);
                            main_function();
                        }
                    }
                    setState(69);
                    _errHandler.sync(this);
                    _la = _input.LA(1);
                }
            }
        } catch (RecognitionException re)
        {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally
        {
            exitRule();
        }
        return _localctx;
    }

    public static class Operator_bool1Context extends ParserRuleContext
    {
        public List<TerminalNode> LOGIC_1()
        {
            return getTokens(codeParser.LOGIC_1);
        }

        public List<Operator_bool2Context> operator_bool2()
        {
            return getRuleContexts(Operator_bool2Context.class);
        }

        public Operator_bool3Context operator_bool3()
        {
            return getRuleContext(Operator_bool3Context.class, 0);
        }

        public TerminalNode LOGIC_1(int i)
        {
            return getToken(codeParser.LOGIC_1, i);
        }

        public Operator_bool2Context operator_bool2(int i)
        {
            return getRuleContext(Operator_bool2Context.class, i);
        }

        public Operator_bool1Context(ParserRuleContext parent, int invokingState)
        {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex()
        {
            return RULE_operator_bool1;
        }

        @Override
        public void enterRule(ParseTreeListener listener)
        {
            if (listener instanceof codeListener)
                ((codeListener) listener).enterOperator_bool1(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener)
        {
            if (listener instanceof codeListener)
                ((codeListener) listener).exitOperator_bool1(this);
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor)
        {
            if (visitor instanceof codeVisitor)
                return ((codeVisitor<? extends T>) visitor).visitOperator_bool1(this);
            else
                return visitor.visitChildren(this);
        }
    }

    public final Operator_bool1Context operator_bool1() throws RecognitionException
    {
        Operator_bool1Context _localctx = new Operator_bool1Context(_ctx, getState());
        enterRule(_localctx, 2, RULE_operator_bool1);
        int _la;
        try
        {
            setState(79);
            switch (getInterpreter().adaptivePredict(_input, 4, _ctx))
            {
            case 1:
                enterOuterAlt(_localctx, 1);
                {
                    setState(70);
                    operator_bool3();
                }
                break;

            case 2:
                enterOuterAlt(_localctx, 2);
                {
                    setState(71);
                    operator_bool2();
                    setState(76);
                    _errHandler.sync(this);
                    _la = _input.LA(1);
                    while (_la == LOGIC_1)
                    {
                        {
                            {
                                setState(72);
                                match(LOGIC_1);
                                setState(73);
                                operator_bool2();
                            }
                        }
                        setState(78);
                        _errHandler.sync(this);
                        _la = _input.LA(1);
                    }
                }
                break;
            }
        } catch (RecognitionException re)
        {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally
        {
            exitRule();
        }
        return _localctx;
    }

    public static class Operator_bool2Context extends ParserRuleContext
    {
        public List<Operator_bool3Context> operator_bool3()
        {
            return getRuleContexts(Operator_bool3Context.class);
        }

        public Operator_bool3Context operator_bool3(int i)
        {
            return getRuleContext(Operator_bool3Context.class, i);
        }

        public TerminalNode LOGIC_2(int i)
        {
            return getToken(codeParser.LOGIC_2, i);
        }

        public List<TerminalNode> LOGIC_2()
        {
            return getTokens(codeParser.LOGIC_2);
        }

        public Operator_bool2Context(ParserRuleContext parent, int invokingState)
        {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex()
        {
            return RULE_operator_bool2;
        }

        @Override
        public void enterRule(ParseTreeListener listener)
        {
            if (listener instanceof codeListener)
                ((codeListener) listener).enterOperator_bool2(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener)
        {
            if (listener instanceof codeListener)
                ((codeListener) listener).exitOperator_bool2(this);
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor)
        {
            if (visitor instanceof codeVisitor)
                return ((codeVisitor<? extends T>) visitor).visitOperator_bool2(this);
            else
                return visitor.visitChildren(this);
        }
    }

    public final Operator_bool2Context operator_bool2() throws RecognitionException
    {
        Operator_bool2Context _localctx = new Operator_bool2Context(_ctx, getState());
        enterRule(_localctx, 4, RULE_operator_bool2);
        int _la;
        try
        {
            enterOuterAlt(_localctx, 1);
            {
                setState(81);
                operator_bool3();
                setState(86);
                _errHandler.sync(this);
                _la = _input.LA(1);
                while (_la == LOGIC_2)
                {
                    {
                        {
                            setState(82);
                            match(LOGIC_2);
                            setState(83);
                            operator_bool3();
                        }
                    }
                    setState(88);
                    _errHandler.sync(this);
                    _la = _input.LA(1);
                }
            }
        } catch (RecognitionException re)
        {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally
        {
            exitRule();
        }
        return _localctx;
    }

    public static class Operator_bool3Context extends ParserRuleContext
    {
        public TerminalNode LOGIC_3(int i)
        {
            return getToken(codeParser.LOGIC_3, i);
        }

        public Expression1Context expression1(int i)
        {
            return getRuleContext(Expression1Context.class, i);
        }

        public List<TerminalNode> LOGIC_3()
        {
            return getTokens(codeParser.LOGIC_3);
        }

        public List<Expression1Context> expression1()
        {
            return getRuleContexts(Expression1Context.class);
        }

        public Operator_bool3Context(ParserRuleContext parent, int invokingState)
        {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex()
        {
            return RULE_operator_bool3;
        }

        @Override
        public void enterRule(ParseTreeListener listener)
        {
            if (listener instanceof codeListener)
                ((codeListener) listener).enterOperator_bool3(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener)
        {
            if (listener instanceof codeListener)
                ((codeListener) listener).exitOperator_bool3(this);
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor)
        {
            if (visitor instanceof codeVisitor)
                return ((codeVisitor<? extends T>) visitor).visitOperator_bool3(this);
            else
                return visitor.visitChildren(this);
        }
    }

    public final Operator_bool3Context operator_bool3() throws RecognitionException
    {
        Operator_bool3Context _localctx = new Operator_bool3Context(_ctx, getState());
        enterRule(_localctx, 6, RULE_operator_bool3);
        int _la;
        try
        {
            enterOuterAlt(_localctx, 1);
            {
                setState(89);
                expression1();
                setState(94);
                _errHandler.sync(this);
                _la = _input.LA(1);
                while (_la == LOGIC_3)
                {
                    {
                        {
                            setState(90);
                            match(LOGIC_3);
                            setState(91);
                            expression1();
                        }
                    }
                    setState(96);
                    _errHandler.sync(this);
                    _la = _input.LA(1);
                }
            }
        } catch (RecognitionException re)
        {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally
        {
            exitRule();
        }
        return _localctx;
    }

    public static class Expression1Context extends ParserRuleContext
    {
        public Expression_finalContext expression_final()
        {
            return getRuleContext(Expression_finalContext.class, 0);
        }

        public TerminalNode ARTH_1(int i)
        {
            return getToken(codeParser.ARTH_1, i);
        }

        public List<TerminalNode> ARTH_1()
        {
            return getTokens(codeParser.ARTH_1);
        }

        public Expression2Context expression2(int i)
        {
            return getRuleContext(Expression2Context.class, i);
        }

        public List<Expression2Context> expression2()
        {
            return getRuleContexts(Expression2Context.class);
        }

        public Expression1Context(ParserRuleContext parent, int invokingState)
        {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex()
        {
            return RULE_expression1;
        }

        @Override
        public void enterRule(ParseTreeListener listener)
        {
            if (listener instanceof codeListener)
                ((codeListener) listener).enterExpression1(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener)
        {
            if (listener instanceof codeListener)
                ((codeListener) listener).exitExpression1(this);
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor)
        {
            if (visitor instanceof codeVisitor)
                return ((codeVisitor<? extends T>) visitor).visitExpression1(this);
            else
                return visitor.visitChildren(this);
        }
    }

    public final Expression1Context expression1() throws RecognitionException
    {
        Expression1Context _localctx = new Expression1Context(_ctx, getState());
        enterRule(_localctx, 8, RULE_expression1);
        int _la;
        try
        {
            setState(106);
            switch (getInterpreter().adaptivePredict(_input, 8, _ctx))
            {
            case 1:
                enterOuterAlt(_localctx, 1);
                {
                    setState(97);
                    expression_final();
                }
                break;

            case 2:
                enterOuterAlt(_localctx, 2);
                {
                    setState(98);
                    expression2();
                    setState(103);
                    _errHandler.sync(this);
                    _la = _input.LA(1);
                    while (_la == ARTH_1)
                    {
                        {
                            {
                                setState(99);
                                match(ARTH_1);
                                setState(100);
                                expression2();
                            }
                        }
                        setState(105);
                        _errHandler.sync(this);
                        _la = _input.LA(1);
                    }
                }
                break;
            }
        } catch (RecognitionException re)
        {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally
        {
            exitRule();
        }
        return _localctx;
    }

    public static class Expression2Context extends ParserRuleContext
    {
        public Expression_finalContext expression_final()
        {
            return getRuleContext(Expression_finalContext.class, 0);
        }

        public List<Expression3Context> expression3()
        {
            return getRuleContexts(Expression3Context.class);
        }

        public List<TerminalNode> ARTH_2()
        {
            return getTokens(codeParser.ARTH_2);
        }

        public Expression3Context expression3(int i)
        {
            return getRuleContext(Expression3Context.class, i);
        }

        public TerminalNode ARTH_2(int i)
        {
            return getToken(codeParser.ARTH_2, i);
        }

        public Expression2Context(ParserRuleContext parent, int invokingState)
        {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex()
        {
            return RULE_expression2;
        }

        @Override
        public void enterRule(ParseTreeListener listener)
        {
            if (listener instanceof codeListener)
                ((codeListener) listener).enterExpression2(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener)
        {
            if (listener instanceof codeListener)
                ((codeListener) listener).exitExpression2(this);
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor)
        {
            if (visitor instanceof codeVisitor)
                return ((codeVisitor<? extends T>) visitor).visitExpression2(this);
            else
                return visitor.visitChildren(this);
        }
    }

    public final Expression2Context expression2() throws RecognitionException
    {
        Expression2Context _localctx = new Expression2Context(_ctx, getState());
        enterRule(_localctx, 10, RULE_expression2);
        int _la;
        try
        {
            setState(117);
            switch (getInterpreter().adaptivePredict(_input, 10, _ctx))
            {
            case 1:
                enterOuterAlt(_localctx, 1);
                {
                    setState(108);
                    expression_final();
                }
                break;

            case 2:
                enterOuterAlt(_localctx, 2);
                {
                    setState(109);
                    expression3();
                    setState(114);
                    _errHandler.sync(this);
                    _la = _input.LA(1);
                    while (_la == ARTH_2)
                    {
                        {
                            {
                                setState(110);
                                match(ARTH_2);
                                setState(111);
                                expression3();
                            }
                        }
                        setState(116);
                        _errHandler.sync(this);
                        _la = _input.LA(1);
                    }
                }
                break;
            }
        } catch (RecognitionException re)
        {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally
        {
            exitRule();
        }
        return _localctx;
    }

    public static class Expression3Context extends ParserRuleContext
    {
        public Expression_finalContext expression_final()
        {
            return getRuleContext(Expression_finalContext.class, 0);
        }

        public List<TerminalNode> ARTH_3()
        {
            return getTokens(codeParser.ARTH_3);
        }

        public Expression4Context expression4(int i)
        {
            return getRuleContext(Expression4Context.class, i);
        }

        public List<Expression4Context> expression4()
        {
            return getRuleContexts(Expression4Context.class);
        }

        public TerminalNode ARTH_3(int i)
        {
            return getToken(codeParser.ARTH_3, i);
        }

        public Expression3Context(ParserRuleContext parent, int invokingState)
        {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex()
        {
            return RULE_expression3;
        }

        @Override
        public void enterRule(ParseTreeListener listener)
        {
            if (listener instanceof codeListener)
                ((codeListener) listener).enterExpression3(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener)
        {
            if (listener instanceof codeListener)
                ((codeListener) listener).exitExpression3(this);
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor)
        {
            if (visitor instanceof codeVisitor)
                return ((codeVisitor<? extends T>) visitor).visitExpression3(this);
            else
                return visitor.visitChildren(this);
        }
    }

    public final Expression3Context expression3() throws RecognitionException
    {
        Expression3Context _localctx = new Expression3Context(_ctx, getState());
        enterRule(_localctx, 12, RULE_expression3);
        int _la;
        try
        {
            setState(128);
            switch (getInterpreter().adaptivePredict(_input, 12, _ctx))
            {
            case 1:
                enterOuterAlt(_localctx, 1);
                {
                    setState(119);
                    expression_final();
                }
                break;

            case 2:
                enterOuterAlt(_localctx, 2);
                {
                    setState(120);
                    expression4();
                    setState(125);
                    _errHandler.sync(this);
                    _la = _input.LA(1);
                    while (_la == ARTH_3)
                    {
                        {
                            {
                                setState(121);
                                match(ARTH_3);
                                setState(122);
                                expression4();
                            }
                        }
                        setState(127);
                        _errHandler.sync(this);
                        _la = _input.LA(1);
                    }
                }
                break;
            }
        } catch (RecognitionException re)
        {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally
        {
            exitRule();
        }
        return _localctx;
    }

    public static class Expression4Context extends ParserRuleContext
    {
        public Expression_finalContext expression_final()
        {
            return getRuleContext(Expression_finalContext.class, 0);
        }

        public Expression5Context expression5()
        {
            return getRuleContext(Expression5Context.class, 0);
        }

        public TerminalNode ARTH_4()
        {
            return getToken(codeParser.ARTH_4, 0);
        }

        public Expression4Context(ParserRuleContext parent, int invokingState)
        {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex()
        {
            return RULE_expression4;
        }

        @Override
        public void enterRule(ParseTreeListener listener)
        {
            if (listener instanceof codeListener)
                ((codeListener) listener).enterExpression4(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener)
        {
            if (listener instanceof codeListener)
                ((codeListener) listener).exitExpression4(this);
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor)
        {
            if (visitor instanceof codeVisitor)
                return ((codeVisitor<? extends T>) visitor).visitExpression4(this);
            else
                return visitor.visitChildren(this);
        }
    }

    public final Expression4Context expression4() throws RecognitionException
    {
        Expression4Context _localctx = new Expression4Context(_ctx, getState());
        enterRule(_localctx, 14, RULE_expression4);
        try
        {
            setState(134);
            switch (getInterpreter().adaptivePredict(_input, 13, _ctx))
            {
            case 1:
                enterOuterAlt(_localctx, 1);
                {
                    setState(130);
                    expression_final();
                }
                break;

            case 2:
                enterOuterAlt(_localctx, 2);
                {
                    setState(131);
                    expression5();
                    setState(132);
                    match(ARTH_4);
                }
                break;
            }
        } catch (RecognitionException re)
        {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally
        {
            exitRule();
        }
        return _localctx;
    }

    public static class Expression5Context extends ParserRuleContext
    {
        public Expression_finalContext expression_final()
        {
            return getRuleContext(Expression_finalContext.class, 0);
        }

        public TerminalNode TOKEN_CLOS_P()
        {
            return getToken(codeParser.TOKEN_CLOS_P, 0);
        }

        public TerminalNode TOKEN_OPEN_P()
        {
            return getToken(codeParser.TOKEN_OPEN_P, 0);
        }

        public Expression1Context expression1()
        {
            return getRuleContext(Expression1Context.class, 0);
        }

        public Expression5Context(ParserRuleContext parent, int invokingState)
        {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex()
        {
            return RULE_expression5;
        }

        @Override
        public void enterRule(ParseTreeListener listener)
        {
            if (listener instanceof codeListener)
                ((codeListener) listener).enterExpression5(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener)
        {
            if (listener instanceof codeListener)
                ((codeListener) listener).exitExpression5(this);
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor)
        {
            if (visitor instanceof codeVisitor)
                return ((codeVisitor<? extends T>) visitor).visitExpression5(this);
            else
                return visitor.visitChildren(this);
        }
    }

    public final Expression5Context expression5() throws RecognitionException
    {
        Expression5Context _localctx = new Expression5Context(_ctx, getState());
        enterRule(_localctx, 16, RULE_expression5);
        try
        {
            setState(141);
            switch (_input.LA(1))
            {
            case TOKEN_OPEN_P:
                enterOuterAlt(_localctx, 1);
                {
                    setState(136);
                    match(TOKEN_OPEN_P);
                    setState(137);
                    expression1();
                    setState(138);
                    match(TOKEN_CLOS_P);
                }
                break;
            case ID:
            case NUM:
            case STRING:
                enterOuterAlt(_localctx, 2);
                {
                    setState(140);
                    expression_final();
                }
                break;
            default:
                throw new NoViableAltException(this);
            }
        } catch (RecognitionException re)
        {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally
        {
            exitRule();
        }
        return _localctx;
    }

    public static class Expression_finalContext extends ParserRuleContext
    {
        public Function_callContext function_call()
        {
            return getRuleContext(Function_callContext.class, 0);
        }

        public TerminalNode ID()
        {
            return getToken(codeParser.ID, 0);
        }

        public TerminalNode STRING()
        {
            return getToken(codeParser.STRING, 0);
        }

        public TerminalNode NUM()
        {
            return getToken(codeParser.NUM, 0);
        }

        public Expression_finalContext(ParserRuleContext parent, int invokingState)
        {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex()
        {
            return RULE_expression_final;
        }

        @Override
        public void enterRule(ParseTreeListener listener)
        {
            if (listener instanceof codeListener)
                ((codeListener) listener).enterExpression_final(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener)
        {
            if (listener instanceof codeListener)
                ((codeListener) listener).exitExpression_final(this);
        }
